[tool.poetry]
name = "nexus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
pytesseract = "^0.3.8"
yapf = "^0.31.0"
isort = "^5.9.3"
Pillow = "^8.3.1"
opencv-python = "^4.5.3"
pdf2image = "^1.16.0"
imutils = "^0.5.4"
word2vec = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
